Ensure login button doesn't overlap with post.

--- a/src/components/Feed.module.css
+++ b/src/components/Feed.module.css
@@ -75,6 +75,8 @@
     position: relative;
 
     min-height: 6em;
+
+    z-index: 2;
   }
 
   .accounts>* {
