--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -35,7 +35,7 @@
   opacity: 100%;
   pointer-events: auto;
 
-  z-index: 2;
+  z-index: 3;
 }
 
 .postViewer {
